Add zappa backend.

--- a/react-frontend/.env.example
+++ b/react-frontend/.env.example
@@ -2,3 +2,6 @@
 
 # WebSocket Configuration
 VITE_WEBSOCKET_URL=wss://your-api-id.execute-api.your-region.amazonaws.com/prod
+
+# Zappa Backend API Configuration
+VITE_API_BASE_URL=https://your-zappa-api-id.execute-api.your-region.amazonaws.com/dev
