Finalize the llm prompt.

--- a/zappa_backend/zappa_settings.json
+++ b/zappa_backend/zappa_settings.json
@@ -25,10 +25,10 @@
         "runtime": "python3.11",
         "s3_bucket": "semantic-search-zappa-deployments",
         "environment_variables": {
-            "OPENSEARCH_ENDPOINT": "",
-            "WEBSOCKET_API_ENDPOINT": "",
+            "OPENSEARCH_ENDPOINT": "search-sea-policy-intelligence-es-xmiylvxlygylgkxfwuauapxn5a.us-east-1.es.amazonaws.com",
+            "WEBSOCKET_API_ENDPOINT": "wss://oaegd5robi.execute-api.us-east-1.amazonaws.com/prod",
             "MODEL_ID": "amazon.titan-embed-text-v1",
-            "INDEX_NAME": "semantic-search-index"
+            "INDEX_NAME": "policy-articles"
         },
         "timeout_seconds": 300,
         "memory_size": 512,
